--- a/package.json
+++ b/package.json
@@ -2,6 +2,14 @@
   "name": "react-native-material-letter-icon",
   "version": "0.0.1",
   "description": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gaetanozappi/react-native-material-letter-icon.git"
+  },
+  "bugs": {
+    "url": "https://github.com/gaetanozappi/react-native-material-letter-icon/issues"
+  },
+  "homepage": "https://github.com/gaetanozappi/react-native-material-letter-icon#readme",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
