--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,1 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.reactlibrary"></manifest>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.zappi.ui.material.letter.icon"></manifest>
