Add issue template github

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "letter",
     "icon"
   ],
-  "author": "",
-  "license": "",
+  "author": "Gaetano Zappi",
+  "license": "Apache License 2.0",
   "peerDependencies": {}
 }
